# ETL_Pipeline

./: .env.example  .gitignore  PRODUCTION_MANUAL_RUNBOOK.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  pipeline.yaml
configs/companies/: example-flat.yaml.example  gainr.yaml
deploy/logrotate/: rag-ht
deploy/sql/: mysql_accounts.sql.example
deploy/systemd/: rag-ht-etl@.service  rag-ht-etl@.timer  rag-ht-status.service
scripts/: install_systemd.sh  run_scheduled_etl.sh  setup.sh  verify_streaming_equivalence.py
src/rag_ht_pipeline/: __init__.py  artifacts.py  config.py  credentials.py  incremental.py  mysql_loader.py  mysql_source_loader.py  operations.py  pipeline.py  postgres_loader.py  publisher.py  source_sync.py  stage1_category.py  stage2_location.py  stage3_attributes.py  stage3_attributes_streaming.py  stage4_embedding_ready.py  stage5_search_ready.py  status_server.py  validation.py
src/rag_ht_pipeline/adapters/: __init__.py  base.py  flat_catalog.py  gainr.py  registry.py
tests/: test_pipeline_package.py
