[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ht-pipeline"
version = "0.1.0"
description = "Rental marketplace CSV enrichment and embedding-ready data pipeline"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
  "python-dateutil",
  "PyYAML",
]

[project.optional-dependencies]
postgres = [
  "SQLAlchemy",
  "psycopg[binary]",
  "python-dotenv",
]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
