[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ht-pipeline"
version = "0.2.0"
description = "Isolated multi-company catalog enrichment and search-ready data pipeline"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
  "python-dateutil",
  "PyYAML",
]

[project.optional-dependencies]
postgres = [
  "SQLAlchemy",
  "psycopg[binary]",
  "python-dotenv",
]
source-db = [
  "SQLAlchemy",
  "psycopg[binary]",
  "PyMySQL",
  "python-dotenv",
]
dev = [
  "pytest",
]

[project.scripts]
rag-ht-pipeline = "rag_ht_pipeline.pipeline:main"
rag-ht-source-sync = "rag_ht_pipeline.source_sync:main"
rag-ht-ops = "rag_ht_pipeline.operations:main"
rag-ht-status-server = "rag_ht_pipeline.status_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
